# catalog2md

./: .gitignore  README.md  create_test_pdf.py  pyproject.toml  run_web.py
catalog2md/: __init__.py  __main__.py  chunker.py  cli.py  extractors.py  models.py  part_numbers.py  tables.py  validator.py  writer.py
docs/: research_docling_api.md  research_rag_chunking.md
web/: app.js  index.html  style.css
